[gd_scene load_steps=3 format=2]

[ext_resource path="res://Hud.gd" type="Script" id=1]
[ext_resource path="res://nes.png" type="Texture" id=2]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Points" type="Label" parent="."]
margin_left = 55.0
margin_top = 13.0
margin_right = 116.0
margin_bottom = 39.0
text = "0"

[node name="Nes" type="Sprite" parent="."]
position = Vector2( 26, 21 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="TimeLimit" type="Timer" parent="."]
autostart = true

[node name="GameTime" type="Label" parent="."]
margin_left = 593.0
margin_top = 10.0
margin_right = 633.0
margin_bottom = 24.0
text = "30"

[node name="Start" type="Button" parent="."]
anchor_left = 0.215
anchor_top = 0.415
anchor_right = 0.284
anchor_bottom = 0.45
margin_left = 153.4
margin_top = 109.8
margin_right = 169.24
margin_bottom = 123.0
text = "Restart"

[connection signal="timeout" from="TimeLimit" to="." method="_on_TimeLimit_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_Button_pressed"]
